# FMradio

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/abch/fmradio/: App.java  ButtonsAdapter.java  FreqsArray.java  MainActivity.java  RadioControl.java  RadioService.java  RadioState.java  RadioStateParcel.java
app/src/main/java/ru/abch/fmradio/android_serialport_api/: SerialPort.java  SerialPortFinder.java
app/src/main/java/ru/abch/fmradio/rulerpicker/: ObservableHorizontalScrollView.java  RulerValuePicker.java  RulerValuePickerListener.java  RulerView.java  RulerViewUtils.java
app/src/main/java/ru/abch/fmradio/ui/main/: MainFragment.java  MainViewModel.java  SettingsFragment.java
app/src/main/jni/: SerialPort.c  SerialPort.h  gen_SerialPort_h.sh
app/src/main/res/: styles.xml
app/src/main/res/drawable/: thumb_image.xml
app/src/main/res/drawable-v24/: back.xml
app/src/main/res/layout/: button_item.xml  fragment_radio2.xml  main_activity.xml  main_fragment.xml  radio2_controls.xml  radio_buttons.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
